Ignore verilator output

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,22 @@
 .idea
 *.vcd
 *.fst
+*.xml
+*.d
+*.o
+*.a
+*.dat
+*.pyc
+*.h
+*.mk
+*.cpp
 *.fst.hier
+*/sim_build/*/*
+*/sim_build/rtl/*
+*/__pycache__/*
+Vtop
 runs
 tt_submission
 src/user_config.json
 src/config_merged.json
 test/sim_build
-test/__pycache__/
-test/results.xml
-test/gate_level_netlist.v
